@@ -1,3 +1,11 @@
+2007-02-15  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Beth Dakin.
+        
+        * DumpRenderTree/DumpRenderTree.m: Don't ignore NSAttributedString WebCore::Node
+        leaks anymore, either, since r19486 fixed them, too.
+        (shouldIgnoreWebCoreNodeLeaks):
+
 2007-02-15  Darin Adler  <darin@apple.com>
 
         * Scripts/run-webkit-tests: Don't ignore NSAttributedString leaks any more. Those were
